style.css
*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

header{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;

  background-color: #1f2937;
  color: white;
}

header nav ul{
  display: flex;
  flex-direction: row;
}

header nav ul li{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  flex-direction: row;
  list-style: none;
}

/*hero styles*/
#hero{
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  background-color: #1f2937;

  color: white;
  padding-bottom: 3rem;
  padding-top: 5rem;
}

.hero-right{
  background-color: #e5e7eb;
  color: black;
  padding: 5rem;
}


#hero .hero-left button{
  background-color: #3882f6;
  color: white;
  padding: 0.3rem 2rem;
  border-radius: 0.7cap;
  margin-top: 1rem;
  border: none;
  cursor: pointer;

}

/*four layout styles*/
#four-layout{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: 3rem;
}

#four-layout .content{
  display: flex;
  flex-direction: row;
  padding: 5rem;
  justify-content: space-evenly;
}
#four-layout .content .box{
  background-color: #e5e7eb;
  color: black;
  padding: 2rem;
  margin: 1rem;
  flex: 1;
}

.border-1, .border-2, .border-3, .border-4{
  border: 2px solid #3882f6;
  background-color: white;
  width: 10rem;
  height: 10rem;
  border-radius: 1cap;

}

